WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164424
IndexedDB 2.0: Clean up more transaction abort and exception throwing behavior from IDBObjectStore
https://bugs.webkit.org/show_bug.cgi?id=164424
Summary
IndexedDB 2.0: Clean up more transaction abort and exception throwing behavio...
Brady Eidson
Reported
2016-11-04 13:13:03 PDT
IndexedDB 2.0: Clean up more transaction abort and exception throwing behavior from IDBObjectStore
Attachments
Patch
(31.06 KB, patch)
2016-11-04 14:50 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch
(32.20 KB, patch)
2016-11-04 14:57 PDT
,
Brady Eidson
achristensen
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-cq-01 for mac-yosemite
(1.16 MB, application/zip)
2016-11-04 16:08 PDT
,
WebKit Commit Bot
no flags
Details
Archive of layout-test-results from ews114 for mac-yosemite
(2.02 MB, application/zip)
2016-11-04 16:12 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(
deleted
)
2016-11-04 16:19 PDT
,
Build Bot
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-11-04 13:55:56 PDT
This patch will actually shift a few PASSes to FAILs in the w3c tests, but those are problems in the spec that are under discussion, and not actually meaningful regressions.
Brady Eidson
Comment 2
2016-11-04 14:50:38 PDT
Created
attachment 293935
[details]
Patch
Brady Eidson
Comment 3
2016-11-04 14:51:21 PDT
Forgot some changes, ignore that patch
Brady Eidson
Comment 4
2016-11-04 14:57:01 PDT
Created
attachment 293938
[details]
Patch
Alex Christensen
Comment 5
2016-11-04 15:00:02 PDT
Comment on
attachment 293938
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=293938&action=review
> LayoutTests/imported/w3c/web-platform-tests/IndexedDB/idbcursor_advance_index7-expected.txt:2 > -PASS IDBCursor.advance() - index - throw TransactionInactiveError > +FAIL IDBCursor.advance() - index - throw TransactionInactiveError assert_throws: Calling advance() should throws an exception TransactionInactiveError when the transaction is not active. function "function () {
:(
> LayoutTests/imported/w3c/web-platform-tests/IndexedDB/idbcursor_continue_index7-expected.txt:2 > -PASS IDBCursor.continue() - index - throw TransactionInactiveError > +FAIL IDBCursor.continue() - index - throw TransactionInactiveError assert_throws: Calling continue() should throws an exception TransactionInactiveError when the transaction is not active. function "function () {
:(
WebKit Commit Bot
Comment 6
2016-11-04 16:08:49 PDT
Comment on
attachment 293938
[details]
Patch Rejecting
attachment 293938
[details]
from commit-queue. New failing tests: imported/w3c/IndexedDB-private-browsing/idbindex_getKey7.html imported/w3c/IndexedDB-private-browsing/idbcursor_continue_index7.html imported/w3c/IndexedDB-private-browsing/idbindex_openCursor2.html imported/w3c/IndexedDB-private-browsing/idbcursor_advance_index7.html imported/w3c/IndexedDB-private-browsing/idbindex_get7.html imported/w3c/IndexedDB-private-browsing/idbindex_openKeyCursor3.html Full output:
http://webkit-queues.webkit.org/results/2463924
WebKit Commit Bot
Comment 7
2016-11-04 16:08:51 PDT
Created
attachment 293950
[details]
Archive of layout-test-results from webkit-cq-01 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 8
2016-11-04 16:12:52 PDT
Comment on
attachment 293938
[details]
Patch
Attachment 293938
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2463913
New failing tests: imported/w3c/IndexedDB-private-browsing/idbindex_getKey7.html imported/w3c/IndexedDB-private-browsing/idbcursor_continue_index7.html imported/w3c/IndexedDB-private-browsing/idbindex_openCursor2.html imported/w3c/IndexedDB-private-browsing/idbcursor_advance_index7.html imported/w3c/IndexedDB-private-browsing/idbindex_get7.html imported/w3c/IndexedDB-private-browsing/idbindex_openKeyCursor3.html
Build Bot
Comment 9
2016-11-04 16:12:54 PDT
Created
attachment 293951
[details]
Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 10
2016-11-04 16:19:37 PDT
Comment on
attachment 293938
[details]
Patch
Attachment 293938
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2463939
New failing tests: imported/w3c/IndexedDB-private-browsing/idbindex_getKey7.html imported/w3c/IndexedDB-private-browsing/idbcursor_continue_index7.html imported/w3c/IndexedDB-private-browsing/idbindex_openCursor2.html imported/w3c/IndexedDB-private-browsing/idbcursor_advance_index7.html imported/w3c/IndexedDB-private-browsing/idbindex_get7.html imported/w3c/IndexedDB-private-browsing/idbindex_openKeyCursor3.html
Build Bot
Comment 11
2016-11-04 16:19:42 PDT
Created
attachment 293955
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Brady Eidson
Comment 12
2016-11-04 16:30:44 PDT
Whoops, forgot to update the private tests copy. Landing manually with those:
https://trac.webkit.org/changeset/208405
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug